config/fr-production/admin/echoserver/middleware-mutate-headers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: clean-headers
  namespace: ingress
  labels:
    ingress: traefik
spec:
  headers:
    customRequestHeaders:
      X-Custom-Request-Header: "echoserver-request-through-a-middleware"
      user-agent: ""
      host: ""
    customResponseHeaders:
      X-Custom-Response-Header: "echoserver-response-through-a-middleware"
