config/fr-production/admin/echoserver/echoserver-ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echoserver
  namespace: admin
  labels:
    ingress: traefik
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`echoserver.fr-production.miniature-fiesta.ml`)
    priority: 10
    services:
    - kind: Service
      name: echoserver
      namespace: admin
      port: 80
      scheme: http
  - kind: Rule
    match: Host(`echoserver.fr-production.miniature-fiesta.ml`) && Path(`/clean`)
    priority: 15
    middlewares:
    - name: clean-headers
      namespace: ingress
    services:
    - kind: Service
      name: echoserver
      namespace: admin
      port: 80
      scheme: http
